<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="GVL" Id="{ccf984d4-07d3-4c7c-bc8c-f6ee9636b01a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//Timing				/////////////////////////////////////////			
	SystemTime							:WORD;
	SystemTimeM							:WORD;
	SystemTimeMs						:WORD;
	ArduinoComsTimer					:TON;
	ArduinoComsTime						:TIME		:=T#20MS;
		
	//Arduino				/////////////////////////////////////////
		//States
	ArduinoState 				AT %Q*	:USINT		:=0;//byte out 0
	FanDyno						AT %Q*	:USINT		:=0;//byte out 1
	OutArduino2					AT %Q*	:BYTE;			//byte out 2
	OutArduino3					AT %Q*	:BYTE;			//byte out 3
	WingSpeed					AT %Q*	:USINT		:=30;//byte out 4
	Idle						:USINT	:= 0;
	
	Byte31IN					AT %I*	:USINT;
	TopEndStop					AT %I*	:BOOL;
	BottomEndStop				AT %I*	:BOOL;
	Analog1   					AT %I*	:USINT;			//byte in 0
	Analog2   					AT %I*	:USINT;			//byte in 1
	Analog3   					AT %I*	:USINT;			//byte in 2
	Average   					AT %I*	:USINT;			//byte in 3
	Sensors						AT %I*	:USINT;			//byte in 12
	Sensors2						AT %I*	:USINT;			//byte in 13
	
		
		//Inputs
	ArduinoBusyBit			:BOOL;
	
		//Outputs
PlixShooter			: BOOL;	//Pin2224V;
StackBlast			: BOOL;	//Pin2324V;
DoubleJets			: BOOL;	//Pin2424V;
CarriageWaitRam		: BOOL;	//Pin2524V;
CarriageRam			: BOOL;	//Pin2624V;
BoxGripper			: BOOL;	//Pin2724V;
BoxGrabber			: BOOL;	//Pin2824V;
FlapFolder1			: BOOL;	//Pin2924V;
FlapFolder2			: BOOL;	//Pin3024V;
BoxCart				: BOOL;	//Pin3124V;
TopClamp			: BOOL;	//Pin3224V;
BottomClamp			: BOOL;	//Pin3324V;
BoxSizeAdjust		: BOOL;	//Pin3424V;
o2					: BOOL;	//Pin3524V;
o3					: BOOL;	//Pin3624V;
o4					: BOOL;	//Pin3724V;
	
	//Stepper				/////////////////////////////////////////
	StackStepper : axis_ref;

	PlixInBox: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>