<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="POU" Id="{52aa0559-33a0-4d96-a025-90b91128d749}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK POU
VAR_INPUT
	go 								:	BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	//STATES				/////////////////////////////////////////
		BoxRemoved						: BOOL;
		PlixRequest						: BOOL;
		BoxGrabbed						: BOOL;
		BoxRemoverState					: INT;
		BoxReady						: BOOL;
		BoxDropRequest					: BOOL;
		BoxDelivered					: BOOL;
		BoxCartHome						: BOOL;
		BoxLoaderState					: INT;
		FlapFolderState					: INT;
		BoxGraberState					: INT;
		BoxDropped 						: BOOL;
		BoxRemover						: INT :=0;
		BoxStackNeeded					: BOOL;
		BoxRefillState					: INT;
		DryRun							: BOOL;
		p								: BOOL;
		
	//ARDUINO				/////////////////////////////////////////
	
		//INPUTS
	
			PlixSensor1					: BOOL; //sensor
			PlixSensor2					: BOOL; //sensor
			MainStackFull				: BOOL; //sensor
			SecondaryStackFull			: BOOL; //sensor
			LastBoxGone					: BOOL; //sensor
			BoxGrabberUp				: BOOL;//sensor
			BoxGrabberDown				: BOOL;//sensor
			FlapFolder1Up				: BOOL;//Sensor
			FlapFolder1Down				: BOOL;//Sensor
			FlapFolder2Up				: BOOL;//Sensor
			FlapFolder2Down				: BOOL;//Sensor
			CarriageAtPickUp			: BOOL; //sensor
			CarriageAtDrop 				: BOOL;//sensor
					
		//OUTPUTS
			
			
			
	//TIME					/////////////////////////////////////////
		BoxCartTimer					: TON;
		BoxCartHomeTimer					: TON;
		BoxCartTime						: TIME := T#8000MS;
		FlapResetTimer					: TON;
		FlapResetTime					: TIME := T#2000MS;
		BoxDropTimer					: TON;
		BoxDropTime						: TIME := T#5000MS;
		PlixFlightTimer 				: TON;
		PlixFlightTime 					: TIME := T#2000MS;
		DownTimer						: TON;
		DownTime	 					: TIME := T#3000MS;
	
	
		StackReadyToDrop: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//need the code to decide when the boxes get dropped onto the gripper for a box refil



//need timer for how long boxes have been on cart, make sure theyre stable(maybe a button to say ready
BoxCartTimer(
	IN := GVL.BoxCart = TRUE,
	PT := BoxCartTime,);
BoxCartHomeTimer(
	IN := GVL.BoxCart = FALSE,
	PT := BoxCartTime,);
DownTimer(
	IN := BoxGrabberDown = FALSE,
	PT := DownTime,);

FlapResetTimer(//dont need this as we have the sensors 
	IN := GVL.FlapFolder2 = FALSE,
	PT := FlapResetTime,);
	
BoxDropTimer(//boxes dropped onto the graber before its gripped and pulled off
	IN := GVL.BottomClamp = TRUE,
	PT := BoxDropTime,);
	
PlixFlightTimer(//time from the head shooting the plix to it landing in a box
	IN := PlixRequest = FALSE,
	PT := PlixFlightTime,);

	
PlixSensor1		 	:= GVL.Sensors.3;
PlixSensor2 		:= GVL.Sensors.5;
MainStackFull 		:= GVL.Sensors.1;
SecondaryStackFull 	:= GVL.Sensors.0;
LastBoxGone 		:= GVL.Sensors.2;
BoxGrabberUp 		:= GVL.Sensors2.6;
BoxGrabberDown		:= GVL.Sensors.4;
FlapFolder1Up		:= GVL.Sensors2.2;
FlapFolder1Down		:= GVL.Sensors2.3;
FlapFolder2Up 		:= GVL.Sensors2.4;
FlapFolder2Down 	:= GVL.Sensors2.5;
CarriageAtPickUp 	:= GVL.Sensors.6;
CarriageAtDrop 		:= GVL.Sensors.7;
	
IF go THEN
	p := TRUE;
END_IF
	
CASE BoxLoaderState OF
	100: //idle state moves the box cart to the loading position and waits for boxes to be put on
		GVL.BoxCart := FALSE;
		BoxCartHome := TRUE;//so we know were at the home end of the rams travel
		GVL.TopClamp := TRUE;
		GVL.BottomClamp := TRUE;
		BoxLoaderState := 200;
		
	200:// if we have boxes in the cart and there are no boxes in the machine and clamp is open we move the stack over
		IF MainStackFull AND NOT SecondaryStackFull AND BoxCartHome AND GVL.TopClamp OR DryRun THEN
			GVL.BoxCart := TRUE;
			BoxCartHome := FALSE;
			BoxLoaderState := 210;
			
		END_IF//move boxes over if no boxes left and stack ready to load.
	210:
		IF (NOT MainStackFull OR DryRun) THEN//after timer and if stack is on the cart we clamp it in place.
			
			BoxLoaderState :=300;
		END_IF
		
	300:
		IF BoxCartTimer.Q AND SecondaryStackFull OR DryRun THEN//once clamped we remove the cart ready to drop stack 
			GVL.BoxCart := FALSE;
			GVL.TopClamp:=FALSE;
			//TopClamp := TRUE;
			
			BoxLoaderState := 400;
		END_IF
	400:	
		IF BoxCartHomeTimer.Q THEN
			BoxCartHome := TRUE;
			StackReadyToDrop := TRUE;
			BoxLoaderState := 500;
		END_IF
	
	
	500:
		IF NOT StackReadyToDrop THEN
			BoxLoaderState := 100; 
		END_IF
		
END_CASE
CASE FlapFolderState OF
	100: 
		GVL.FlapFolder1 := FALSE;
		GVL.FlapFolder2 := FALSE;
		GVL.BoxGripper := FALSE;
		FlapFolderState := 200;
		
	200:
		IF NOT FlapFolder1Up AND NOT FlapFolder2Up THEN
			GVL.BoxGrabber :=TRUE;
			GVL.BoxGripper :=FALSE;
			FlapFolderState := 210
;
		END_IF
	210: 
		IF  StackReadyToDrop THEN //NOT MainStackFull AND //if theres no boxes we say no boxes and wait for that to be sorted
			BoxStackNeeded := TRUE;
			GVL.BottomClamp := TRUE;//drops the boxes on to the gripper
			GVL.TopClamp := TRUE;
			FlapFolderState := 310;
		END_IF
	300: 
		IF NOT StackReadyToDrop THEN
			FlapFolderState := 400;//once boxes are loaded we carry on
		END_IF
	310:
		IF GVL.BoxGrabber THEN
			//GVL.BottomClamp := TRUE;//drops the boxes on to the gripper
			FlapFolderState := 400;
		END_IF
		
		
		
	400:
		IF BoxDropTimer.Q THEN//after a small timer for drop the stack is gripped again
			GVL.BottomClamp :=FALSE;//after timer finnished 
			GVL.BoxGripper :=TRUE;
			FlapFolderState := 500;
		END_IF
		
	500:	//may need a timer here 
		GVL.BoxGrabber := FALSE;//box in the grabber is pulled off bottom of the stack
		FlapFolderState := 600;
		
	600:
		IF NOT BoxGrabberDown AND DownTimer.Q THEN
			GVL.FlapFolder1 := TRUE;
			PlixRequest := TRUE;//must be set false in plix handler aftr shot
			FlapFolderState := 610;
		END_IF
		
	610:
		IF FlapFolder1Down THEN
			FlapFolderState :=710;
		END_IF
		
	710:
		IF NOT PlixRequest	THEN
			//plix has been shot by plix head 
			FlapFolderState := 720;
		END_IF
		
	720:
		//timer to wait a sec for plix to fly
		IF PlixFlightTimer.Q THEN
			FlapFolderState := 730;
		END_IF
	730:
		IF NOT PlixSensor1 AND PlixSensor2 OR DryRun THEN
			GVL.FlapFolder2 := TRUE;
			FlapFolderState := 800;
		END_IF
	800: 
		IF FlapFolder2Down THEN
			BoxReady := TRUE;
			FlapFolderState := 810;
		END_IF
		
	
	810:
		IF BoxGrabbed THEN
			GVL.BoxGripper := FALSE;
			FlapFolderState := 820;
		END_IF
	820:
		IF BoxRemoved THEN 
			FlapFolderState := 100;
		END_IF
END_CASE




CASE BoxRemoverState OF
	100:
		IF CarriageAtPickUp AND NOT BoxDropped THEN //if  carrige at pick up when turned on 
			GVL.CarriageRam :=TRUE; //start it going to drop end
			BoxRemoverState := 200;
		END_IF
		
	200:
		IF NOT CarriageAtPickUp OR DryRun THEN //soon as not at pick up 
			GVL.CarriageWaitRam := TRUE;//turn on wait ram 
			GVL.CarriageRam :=FALSE;// start carridge coming back to pick up
			BoxRemoverState := 300;
		END_IF
		
	300:
		IF (CarriageAtPickUp OR DryRun) AND BoxReady THEN
			GVL.CarriageWaitRam :=FALSE;
			BoxRemoverState := 400;
		END_IF
	400: 
		BoxReady := FALSE;
		BoxGrabbed := TRUE;
		BoxRemoverState := 500;
	500:
		IF NOT GVL.BoxGripper THEN
			GVL.CarriageRam := TRUE;
			BoxRemoverState := 600;
		END_IF
		
	600:
		IF CarriageAtDrop AND BoxDropRequest THEN
			GVL.CarriageWaitRam := TRUE;
			BoxGrabbed := FALSE;
			BoxRemoverState := 700;
		END_IF
	700: 
		IF BoxDropped THEN
			BoxDelivered :=TRUE;
			BoxRemoverState := 200;
		END_IF
END_CASE

CASE BoxRefillState OF
	100:
		IF BoxStackNeeded THEN
			BoxRefillState := 200;
		END_IF
		
	200:
		IF StackReadyToDrop THEN
			BoxRefillState := 300;
		END_IF
	300:
		
		GVL.TopClamp:= TRUE;
		BoxRefillState := 400;
	400:
		IF BoxDropTimer.Q THEN
			StackReadyToDrop := FALSE;
			BoxStackNeeded := FALSE;
			BoxRefillState := 400;	
		END_IF
		
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="POU">
      <LineId Id="69" Count="7" />
      <LineId Id="386" Count="1" />
      <LineId Id="385" Count="0" />
      <LineId Id="373" Count="1" />
      <LineId Id="372" Count="0" />
      <LineId Id="77" Count="11" />
      <LineId Id="342" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="343" Count="0" />
      <LineId Id="348" Count="10" />
      <LineId Id="344" Count="1" />
      <LineId Id="360" Count="1" />
      <LineId Id="346" Count="1" />
      <LineId Id="90" Count="3" />
      <LineId Id="364" Count="1" />
      <LineId Id="94" Count="5" />
      <LineId Id="101" Count="11" />
      <LineId Id="375" Count="0" />
      <LineId Id="113" Count="1" />
      <LineId Id="117" Count="2" />
      <LineId Id="389" Count="0" />
      <LineId Id="395" Count="1" />
      <LineId Id="393" Count="1" />
      <LineId Id="390" Count="2" />
      <LineId Id="120" Count="9" />
      <LineId Id="131" Count="6" />
      <LineId Id="366" Count="0" />
      <LineId Id="138" Count="4" />
      <LineId Id="397" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="146" Count="126" />
      <LineId Id="274" Count="1" />
      <LineId Id="376" Count="0" />
      <LineId Id="380" Count="0" />
      <LineId Id="383" Count="1" />
      <LineId Id="381" Count="1" />
      <LineId Id="378" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>